src/objects/Intake_Services_Checkin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Box_Size__c</fullName>
        <label>Bag/Box Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_Commodity_Usage_JSON__c</fullName>
        <label>Commodity Usage JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Visit_Type__c</fullName>
        <label>Vistor</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_Visitor__c</fullName>
        <label>Vistor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_With_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, means the client is meeting with staff.</inlineHelpText>
        <label>With Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_In_Time_With_Staff__c</fullName>
        <label>Check In Time With Staff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Points_Remaining__c</fullName>
        <label>Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intake Services Current Checkins</label>
</CustomObject>